syntax = "proto3";

package combat;

import "google/protobuf/wrappers.proto";
import "google/protobuf/struct.proto";
 

message StartCombatRequestPb {
  int32 stage_id = 1;
  int32 userId = 2;        // 추가
  int32 battleId = 3;      // 변경
} 

message ActorInitPb {
  int64 actor_id = 1;
  int32 team = 2;
  float x = 3;
  float z = 4;
  int32 hp = 5; 
  int32 waveIndex = 6;
  int64 master_id = 7;
}

message CombatInitialSnapshotPb {
  repeated ActorInitPb actors = 1;
}

message StartCombatResponsePb {
  int64 combat_id = 1;
  CombatInitialSnapshotPb snapshot = 2;
}
 

message CombatCommandPb {
  int64 actor_id = 1;
  int32 skill_id = 2;
  google.protobuf.Int64Value target_actor_id = 3;
  int32 skill_level = 4;
}
 

message CombatLogEventPb {
  int32 t_ms = 1;
  string type = 2;
  string actor = 3;
  google.protobuf.StringValue target = 4;
  google.protobuf.Int32Value damage = 5;
  google.protobuf.BoolValue crit = 6;
  google.protobuf.Struct extra = 7;
}

message CombatLogPagePb {
  int64 combat_id = 1;
  repeated CombatLogEventPb items = 2;
  google.protobuf.StringValue next_cursor = 3;
}
 

message CombatLogSummaryPb {
  int64 combat_id = 1;
  int32 total_events = 2;
  int32 duration_ms = 3;
  int32 damage_done = 4;
  int32 damage_taken = 5;
}
message CombatTickRequestPb {
  int64 combat_id = 1;
  int32 tick = 2;
}

message CombatTickResponsePb {
  int64 combat_id = 1;
  int32 tick = 2;
  CombatSnapshotPb snapshot = 3;
  repeated CombatLogEventPb events = 4; 
}

message ActorSnapshotPb {
  int64 actor_id = 1;
  float x = 2;
  float z = 3;
  int32 hp = 4;
  bool dead = 5;
  repeated CombatLogEventPb events = 6; // 이 틱에서 이 Actor가 일으킨 이벤트
}

message CombatSnapshotPb {
  repeated ActorSnapshotPb actors = 1;
}

message FinishCombatRequestPb {
  int64 combat_id = 1;
  int32 user_id   = 2;
}

message StageRewardItemPb {
  int32 item_id            = 1;
  int32 qty                = 2;
  bool first_clear_reward  = 3;
}

message FinishCombatResponsePb {
  int32 stage_id           = 1;
  int32 stars              = 2;  // 0 ~ 3 (StageStars enum value)
  bool first_clear         = 3;
  repeated StageRewardItemPb rewards = 4;
  int64 gold              = 5;
  int64 gem               = 6;
  int64 token             = 7;
}